--- a/brick-screen.cabal
+++ b/brick-screen.cabal
@@ -27,5 +27,6 @@ library
     , mtl
     , unliftio-core
     , vty
+    , profunctors
   hs-source-dirs:      src
   default-language:    Haskell2010
